[update] Cloud SQL configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # database init, supports mysql too
-database=h2
+database=mysql
 spring.sql.init.schema-locations=classpath*:db/${database}/schema.sql
 spring.sql.init.data-locations=classpath*:db/${database}/data.sql
 
@@ -23,3 +23,10 @@ logging.level.org.springframework=INFO
 
 # Maximum time static resources should be cached
 spring.web.resources.cache.cachecontrol.max-age=12h
+
+spring.cache.caffeine.spec=maximumSize=300,expireAfterAccess=60s
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.cloud.gcp.sql.database-name=${CLOUD_SQL_DB_NAME}
+spring.cloud.gcp.sql.instance-connection-name=${CLOUD_SQL_URL}
+
+spring.profiles.active=mysql
