--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -1,7 +1,9 @@
 # database init, supports mysql too
 database=mysql
-spring.datasource.url=${MYSQL_URL:jdbc:mysql://localhost/petclinic}
-spring.datasource.username=${MYSQL_USER:petclinic}
-spring.datasource.password=${MYSQL_PASS:petclinic}
+# spring.datasource.username=${MYSQL_USER:petclinic}
+spring.datasource.username=${CLOUD_SQL_USER:root}
+spring.datasource.password=${CLOUD_SQL_PW}
+# spring.datasource.password=${MYSQL_PASS:petclinic}
+spring.datasource.continue-on-error=true
 # SQL is written to be idempotent so this is safe
 spring.sql.init.mode=always
