--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -2,8 +2,9 @@
 database=mysql
 # spring.datasource.username=${MYSQL_USER:petclinic}
 spring.datasource.username=${CLOUD_SQL_USER:root}
-spring.datasource.password=${CLOUD_SQL_PW}
+spring.datasource.password=${CLOUD_SQL_PW:root}
 # spring.datasource.password=${MYSQL_PASS:petclinic}
 spring.datasource.continue-on-error=true
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 # SQL is written to be idempotent so this is safe
 spring.sql.init.mode=always
