--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,9 +24,8 @@ logging.level.org.springframework=INFO
 # Maximum time static resources should be cached
 spring.web.resources.cache.cachecontrol.max-age=12h
 
-spring.cache.caffeine.spec=maximumSize=300,expireAfterAccess=60s
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.cloud.gcp.sql.database-name=${CLOUD_SQL_DB_NAME}
-spring.cloud.gcp.sql.instance-connection-name=${CLOUD_SQL_URL}
-
+# spring.cache.caffeine.spec=maximumSize=300,expireAfterAccess=60s
+# spring.cloud.gcp.sql.database-name=${CLOUD_SQL_DB_NAME}
+# spring.cloud.gcp.sql.instance-connection-name=${CLOUD_SQL_URL}
+spring.datasource.url=jdbc:mysql://${CLOUD_SQL_URL}/${CLOUD_SQL_DB_NAME}
 spring.profiles.active=mysql
