--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,6 +12,7 @@ jobs:
   
   deploy:
     runs-on: self-hosted
+    needs: [checkout]
     steps:
         -
           name: Fetch necessary variables
