--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,6 +11,8 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v4.2.2
+        with:
+          clean: true
   
   deploy:
     runs-on: self-hosted
