--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v4.2.2
         with:
           clean: true
-          fetch-tags: true
+          fetch-depth: 1
   
   deploy:
     runs-on: self-hosted
