--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -6,7 +6,7 @@ jobs:
   checkout:
     runs-on: self-hosted
     permissions:
-      contents: write
+      contents: read
     steps:
       -
         name: Checkout
