--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,8 +12,7 @@ jobs:
         name: Checkout
         uses: actions/checkout@v4.2.2
         with:
-          clean: true
-          fetch-depth: 1
+          sparse-checkout: .
   
   deploy:
     runs-on: self-hosted
