--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,54 +10,54 @@ jobs:
         name: Checkout
         uses: actions/checkout@v4.2.2
   
-  # deploy:
-  #   runs-on: self-hosted
-  #   needs: [checkout]
-  #   steps:
-  #       -
-  #         name: Fetch necessary variables
-  #         id: 'vars'
-  #         uses: google-github-actions/get-secretmanager-secrets@v2.2.3
-  #         with:
-  #           secrets: |-
-  #             cluster-name:${{ secrets.SECRET_MANAGER_URL }}/cluster-name
-  #             location:${{ secrets.SECRET_MANAGER_URL }}/gcp-location
-  #             project-id:${{ secrets.SECRET_MANAGER_URL }}/project-id
-  #             helm-values:${{ secrets.SECRET_MANAGER_URL }}/helm-values
-  #             gar-location:${{ secrets.SECRET_MANAGER_URL }}/gar-location
-  #             gar-repository:${{ secrets.SECRET_MANAGER_URL }}/gar-repository
+  deploy:
+    runs-on: self-hosted
+    needs: [checkout]
+    steps:
+        -
+          name: Fetch necessary variables
+          id: 'vars'
+          uses: google-github-actions/get-secretmanager-secrets@v2.2.3
+          with:
+            secrets: |-
+              cluster-name:${{ secrets.SECRET_MANAGER_URL }}/cluster-name
+              location:${{ secrets.SECRET_MANAGER_URL }}/gcp-location
+              project-id:${{ secrets.SECRET_MANAGER_URL }}/project-id
+              helm-values:${{ secrets.SECRET_MANAGER_URL }}/helm-values
+              gar-location:${{ secrets.SECRET_MANAGER_URL }}/gar-location
+              gar-repository:${{ secrets.SECRET_MANAGER_URL }}/gar-repository
           
-  #       -
-  #         name: 'Write values for helm chart'
-  #         run: echo '${{ steps.vars.outputs.helm-values }}' >> values.yaml
-  #         working-directory: charts/petclinic-app/
-  #       -
-  #         name: Get credentials for the running cluster
-  #         id: 'get-creds'
-  #         uses: google-github-actions/get-gke-credentials@v2.3.3
-  #         with:
-  #           cluster_name: ${{ steps.vars.outputs.cluster-name }}
-  #           location: ${{ steps.vars.outputs.location }}
-  #           project_id: ${{ steps.vars.outputs.project-id }}
-  #           namespace: "default"
-  #           use_dns_based_endpoint: true
+        -
+          name: 'Write values for helm chart'
+          run: echo '${{ steps.vars.outputs.helm-values }}' >> values.yaml
+          working-directory: charts/petclinic-app/
+        -
+          name: Get credentials for the running cluster
+          id: 'get-creds'
+          uses: google-github-actions/get-gke-credentials@v2.3.3
+          with:
+            cluster_name: ${{ steps.vars.outputs.cluster-name }}
+            location: ${{ steps.vars.outputs.location }}
+            project_id: ${{ steps.vars.outputs.project-id }}
+            namespace: "default"
+            use_dns_based_endpoint: true
 
-  #       -
-  #         id: 'get-pods'
-  #         run: 'kubectl get pods -A'
+        -
+          id: 'get-pods'
+          run: 'kubectl get pods -A'
 
-  #       -
-  #         id: 'configure-helm'
-  #         uses: Azure/setup-helm@v4.3.0
-  #         with:
-  #           version: latest
+        -
+          id: 'configure-helm'
+          uses: Azure/setup-helm@v4.3.0
+          with:
+            version: latest
         
-  #       -
-  #         name: helm dependency
-  #         id: 'helm-dep'
-  #         working-directory: charts/petclinic-app/
-  #         run: helm dependency build
-  #       -
-  #         id: 'helm-install'
-  #         working-directory: charts/petclinic-app/
-  #         run: helm upgrade myapp . -f values.yaml --namespace default --install
+        -
+          name: helm dependency
+          id: 'helm-dep'
+          working-directory: charts/petclinic-app/
+          run: helm dependency build
+        -
+          id: 'helm-install'
+          working-directory: charts/petclinic-app/
+          run: helm upgrade myapp . -f values.yaml --namespace default --install
