--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,7 +20,7 @@ jobs:
           uses: google-github-actions/get-secretmanager-secrets@v2.2.3
           with:
             secrets: |-
-              cluster-name:${{ secrets.SECRET_MANAGER_URL }}/cluster-name
+              cluster-name:${{ secrets.SECRET_MANAGER_URL }}/cluster-name-${{ github.ref_name }}
               location:${{ secrets.SECRET_MANAGER_URL }}/gcp-location
               project-id:${{ secrets.SECRET_MANAGER_URL }}/project-id
               helm-values:${{ secrets.SECRET_MANAGER_URL }}/helm-values
