--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,12 +20,12 @@ jobs:
           uses: google-github-actions/get-secretmanager-secrets@v2.2.3
           with:
             secrets: |-
-              cluster-name:${{ secrets.SECRET_MANAGER_URL }}/cluster-name-${{ github.ref_name }}
-              location:${{ secrets.SECRET_MANAGER_URL }}/gcp-location
-              project-id:${{ secrets.SECRET_MANAGER_URL }}/project-id
-              helm-values:${{ secrets.SECRET_MANAGER_URL }}/helm-values
-              gar-location:${{ secrets.SECRET_MANAGER_URL }}/gar-location
-              gar-repository:${{ secrets.SECRET_MANAGER_URL }}/gar-repository
+              cluster-name:${{ secrets.SECRET_MANAGER }}/cluster-name-${{ github.ref_name }}
+              location:${{ secrets.SECRET_MANAGER }}/gcp-location
+              project-id:${{ secrets.SECRET_MANAGER }}/project-id
+              helm-values:${{ secrets.SECRET_MANAGER }}/helm-values
+              gar-location:${{ secrets.SECRET_MANAGER }}/gar-location
+              gar-repository:${{ secrets.SECRET_MANAGER }}/gar-repository
           
         -
           name: 'Write values for helm chart'
