--- a/.github/workflows/pull_req.yaml
+++ b/.github/workflows/pull_req.yaml
@@ -59,7 +59,6 @@ jobs:
         id: 'vars'
         uses: google-github-actions/get-secretmanager-secrets@v2.2.3
         with:
-          export_to_environment: true
           secrets: |-
             gar-location:${{ secrets.SECRET_MANAGER }}/gar-location
             project-id:${{ secrets.SECRET_MANAGER }}/project-id
@@ -79,7 +78,7 @@ jobs:
 
       -
         name: Authenticate to GAR
-        run: gcloud auth configure-docker ${{ github.env.gar-location }}-docker.pkg.dev
+        run: gcloud auth configure-docker ${{ steps.vars.outputs.gar-location }}-docker.pkg.dev
 
       -
         name: Build and push docker image to GAR
@@ -88,4 +87,4 @@ jobs:
           context: .
           push: true
           tags: |-
-            ${{ github.env.gar-location }}-docker.pkg.dev/${{ github.env.project-id }}/${{ github.env.gar-repo }}/petclinic-cloud-prod:${{ steps.sha.outputs.sha_short }}
+            ${{ steps.vars.outputs.gar-location }}-docker.pkg.dev/${{ steps.vars.outputs.project-id }}/${{ steps.vars.outputs.gar-repo }}/petclinic-cloud-prod:${{ steps.sha.outputs.sha_short }}
