--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -61,3 +61,10 @@ jobs:
           id: 'helm-install'
           working-directory: charts/petclinic-app/
           run: helm upgrade myapp . -f values.yaml --namespace default --install --set container.image="${{ steps.vars.outputs.gar-location }}-docker.pkg.dev/${{ steps.vars.outputs.project-id }}/${{ steps.vars.outputs.gar-repository }}/petclinic-cloud-prod:release"
+        
+        -
+          id: 'petclinic-ip'
+          run: kubectl get svc --field-selector metadata.name==my-service-app
+        -
+          id: 'grafana-ip'
+          run: kubectl get svc --field-selector metadata.name==myapp-grafana
