--- a/.github/workflows/pull_req.yaml
+++ b/.github/workflows/pull_req.yaml
@@ -89,6 +89,7 @@ jobs:
           push: true
           tags: |-
             ${{ steps.vars.outputs.gar-location }}-docker.pkg.dev/${{ steps.vars.outputs.project-id }}/${{ steps.vars.outputs.gar-repo }}/${{ steps.vars.outputs.image-name }}-${{ github.head_ref }}:${{ steps.short-sha.outputs.sha }}
+            ${{ steps.vars.outputs.gar-location }}-docker.pkg.dev/${{ steps.vars.outputs.project-id }}/${{ steps.vars.outputs.gar-repo }}/${{ steps.vars.outputs.image-name }}-${{ github.head_ref }}:release
       
       -
         name: Scan the image with Trivy
