--- a/.github/workflows/pull_req.yaml
+++ b/.github/workflows/pull_req.yaml
@@ -65,9 +65,13 @@ jobs:
             gar-repo:${{ secrets.SECRET_MANAGER }}/gar-repository
             image-name:${{ secrets.SECRET_MANAGER }}/image-name
       
+      #-
+       # id: 'short-sha'
+        #uses: benjlevesque/short-sha@v3.0
       -
         id: 'short-sha'
-        uses: benjlevesque/short-sha@v3.0
+        name: Set image tag from SHA
+        run: echo "IMAGE_TAG=${GITHUB_SHA::7}" >> $GITHUB_ENV
       -
         id: 'build'
         name: gradle build
@@ -88,7 +92,7 @@ jobs:
           context: .
           push: true
           tags: |-
-            ${{ steps.vars.outputs.gar-location }}-docker.pkg.dev/${{ steps.vars.outputs.project-id }}/${{ steps.vars.outputs.gar-repo }}/${{ steps.vars.outputs.image-name }}-${{ github.head_ref }}:${{ steps.short-sha.outputs.sha }}
+            ${{ steps.vars.outputs.gar-location }}-docker.pkg.dev/${{ steps.vars.outputs.project-id }}/${{ steps.vars.outputs.gar-repo }}/${{ steps.vars.outputs.image-name }}-${{ github.head_ref }}:${IMAGE_TAG}
             ${{ steps.vars.outputs.gar-location }}-docker.pkg.dev/${{ steps.vars.outputs.project-id }}/${{ steps.vars.outputs.gar-repo }}/${{ steps.vars.outputs.image-name }}-${{ github.head_ref }}:release
       
       -
