--- a/charts/petclinic-app/templates/deployment.yaml
+++ b/charts/petclinic-app/templates/deployment.yaml
@@ -18,6 +18,7 @@ spec:
         prometheus.io/scrape: "true"
         prometheus.io/port: "8000"
         prometheus.io/path: "/metrics"
+        rollme: {{ randAlphaNum 5 | quote }}
     spec:
       containers:
         - name: {{ .Values.container.name }}
