--- a/.github/workflows/pull_req.yaml
+++ b/.github/workflows/pull_req.yaml
@@ -100,7 +100,7 @@ jobs:
         id: 'scan'
         uses: aquasecurity/trivy-action@0.30.0
         with:
-          image-ref: '${{ steps.vars.outputs.gar-location }}-docker.pkg.dev/${{ steps.vars.outputs.project-id }}/${{ steps.vars.outputs.gar-repo }}/${{ steps.vars.outputs.image-name }}-${{ github.head_ref }}:${{ steps.short-sha.outputs.sha }}'
+          image-ref: '${{ steps.vars.outputs.gar-location }}-docker.pkg.dev/${{ steps.vars.outputs.project-id }}/${{ steps.vars.outputs.gar-repo }}/${{ steps.vars.outputs.image-name }}-${{ github.head_ref }}:${{ env.IMAGE_TAG }}'
           format: 'table'
           exit-code: '0'
           ignore-unfixed: true
